Build RC1.1 July 20, 2011
* Updater now shows progress bar status for each file to be downloaded
* Fix problem with channels clearing when settings changed, and Maximum text lines did not change
* Fix bug with selecting item in Nicklist Popup with no command, sends :No text to send
* Fix bug with $server and $port not parsing on server connect
* Fixed docking problem for side panels
* Ability to drag servers in the Server Tree up and down the list
* Added option to Show Hosts in Nick List under Display Settings
* Added option to Show Nick List buttons under Display settings
* Added option to Show Server List buttons under Display settings
* If pasting 5 or more lines, client asks if you wish to proceed
* Fixed DCC File Receiving
* Fixed colors to be the same colors as IceChat 7
* Server Disconnect errors should show disconnect in server tree


Build RC1 July 5, 2011
* Minor fix to Tabs on Side Panels
* Major update to Plugin Framework, access to Connection Class added
* Will need to re-compile all Plugins
* Plugins folder moved from Appdata/Plugins to Program Files\IceChat\Plugins
* Fixed quickconnect button, does not crash anymore


Build Beta 7 June 20, 2011
* Added option to use external command for playing sound files, can be specified in plugin
* More code fixes to un-bind connection class from main form
* Fix double click crash in Debug Window
* Start showing as IceChat 9, not IceChat 2009


Build Beta 6 June 11, 2011
* Fix bug with parsing channel modes on some networks
* Fix bug with losing the host for nicks in the nick list


Build Beta 5.4 June 9, 2011
* Fix bug with screen buffer clearing randomly
* Fix and finalize the Simple Script Plugin


Build Beta 5.3 June 7, 2011
* Fix bug with screen clearing when buffer got full
* Remove 'unload plugin' from Plugins, and allow to load a plugin from menu


Build Beta 5.2 May 25, 2011
* Added setting for maximum number of text lines
* Changes to Plugins to allow tabs to be added to Editor


