@@ -14,7 +14,7 @@
         <value>IceChat 9</value>
       </setting>
       <setting name="Version" serializeAs="String">
-        <value>Release Candidate 2</value>
+        <value>Release Candidate 1.2</value>
       </setting>
     </IceChat.Properties.Settings>
   </userSettings>
