@@ -37,7 +37,7 @@ namespace IceChat.Properties {
         
         [global::System.Configuration.UserScopedSettingAttribute()]
         [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
-        [global::System.Configuration.DefaultSettingValueAttribute("Release Candidate 1.1")]
+        [global::System.Configuration.DefaultSettingValueAttribute("Release Candidate 2.1")]
         public string Version {
             get {
                 return ((string)(this["Version"]));
