@@ -1,18 +1,17 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-<configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <section name="IceChat.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-    </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="IceChat.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <userSettings>
         <IceChat.Properties.Settings>
             <setting name="ProgramID" serializeAs="String">
                 <value>IceChat 9</value>
             </setting>
             <setting name="Version" serializeAs="String">
-                <value>Release Candidate 1</value>
+                <value>Release Candidate 2.1</value>
             </setting>
         </IceChat.Properties.Settings>
     </userSettings>
